...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="775"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_main" translatesAutoresizingMaskIntoConstraints="NO" id="DZ1-UY-heY">
                                                <rect key="frame" x="101" y="30" width="212" height="212"/>
                                                <constraints>
...
                                                <rect key="frame" x="20" y="272" width="374" height="251"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PUB-m3-Eo2">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
                                                        <color key="backgroundColor" name="#FFF192"/>
...
                                                        <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="email"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SDN-zX-iZk">
                                                        <rect key="frame" x="0.0" y="69" width="374" height="44"/>
                                                        <color key="backgroundColor" name="#FFF192"/>
...
                                                        <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="tel"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rCF-I2-NYP">
                                                        <rect key="frame" x="0.0" y="138" width="374" height="44"/>
                                                        <color key="backgroundColor" name="#FFF192"/>
...
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xUA-h5-rLI">
                                                        <rect key="frame" x="0.0" y="207" width="374" height="44"/>
                                                        <color key="backgroundColor" name="#FFF192"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                <state key="normal" title="REGISTER">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Sign Up" id="ulZ-IK-hay"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <size key="freeformSize" width="414" height="750"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please input the email address that you registered before to active the acccount" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" transl
                                                <rect key="frame" x="20" y="242" width="374" height="38.5"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <state key="normal" title="SUBMIT">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Forgot Password" id="W9T-Ny-Vjk">
                        <barButtonItem key="backBarButtonItem" title=" " id="PAE-dn-ERe"/>
                    </navigationItem>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <state key="normal" title="LOGIN">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
