...
        ref = db.collection("Locations").addDocument(data: [
            "user_Id":LocalUser.current()?.id,
            "long": long,
            "lat":lat
        ]) { err in
            if let err = err {
                let alert = UIAlertController(title: "Error", message: err.localizedDescription, preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
                self.present(alert, animated: true)
            } else {
                let nc = UIStoryboard.init(name: "TabBar", bundle: Bundle.main).instantiateViewController(withIdentifier: "TabBarVC")
                self.resetWindow(with: nc)
            }
        }
...
